--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -17,8 +17,8 @@ jobs:
         with: 
           python-version: '3.10'
       
-      - name: Install Dependencies
-        run: make ci-setup
+      - name: Install Python Dependencies
+        uses: py-actions/py-dependency-install@v3
       
       - name: Run Tests
         run: make ci-test
