--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -19,6 +19,8 @@ jobs:
       
       - name: Install Python Dependencies
         uses: py-actions/py-dependency-install@v3
+        with:
+          path: "A005/requirements.txt"
       
       - name: Run Tests
         run: make ci-test
